# simdprune

./: Cargo.toml  README.md  rustfmt.toml
.cargo/: config
src/: lib.rs  tables.rs
tests/: std_tests.rs
